--- a/inventory/standard/hosts.yaml
+++ b/inventory/standard/hosts.yaml
@@ -99,6 +99,8 @@ all:
                     db-02.grnoc.iu.edu:
                     db.oshean.org:
                     jenkins.grnoc.iu.edu:
+                    kerb.bldc.grnoc.iu.edu:
+                    kerb.ctc.grnoc.iu.edu:
                     mon.bldc.net.cen.ct.gov:
                     mon.ehct.net.cen.ct.gov:
                     mon-01.grnoc.iu.edu:
