--- a/inventory/standard/hosts.yaml
+++ b/inventory/standard/hosts.yaml
@@ -98,6 +98,7 @@ all:
                     db-01.grnoc.iu.edu:
                     db-02.grnoc.iu.edu:
                     db.oshean.org:
+                    dc-dev.grnoc.iu.edu:
                     jenkins.grnoc.iu.edu:
                     kerb.bldc.grnoc.iu.edu:
                     kerb.ctc.grnoc.iu.edu:
