--- a/inventory/standard/host_vars/jdratlif-dev7.ctc.grnoc.iu.edu.yaml
+++ b/inventory/standard/host_vars/jdratlif-dev7.ctc.grnoc.iu.edu.yaml
@@ -42,6 +42,7 @@ vpn_hosts:
   - cloud.bldc.grnoc.iu.edu
   - cloud.ctc.grnoc.iu.edu
   - footprints.ncren.net
+  - oob2.ak23.bldc.grnoc.iu.edu
   - oob2.n13.ctc.grnoc.iu.edu
   - os.bldc.net.internet2.edu
   - os.wash2.net.internet2.edu
