--- a/inventory/standard/group_vars/bastion.yaml
+++ b/inventory/standard/group_vars/bastion.yaml
@@ -85,7 +85,7 @@ ssh_host_configs:
   # grafana servers
   'iu-grafana':
     Hostname: grafana.net.uits.iu.edu
-  'pennren-grafana'
+  'pennren-grafana':
     Hostname: grafana.net.pennren.net
   'sox-grafana':
     Hostname: grafana.sox.net
