--- a/inventory/standard/hosts.yaml
+++ b/inventory/standard/hosts.yaml
@@ -21,6 +21,7 @@ all:
                     frontend.tsds.bldc.grnoc.iu.edu:
                     frontend.tsds.ctc.grnoc.iu.edu:
                     grafana.grnoc.iu.edu:
+                    grafana.caaren.grnoc.iu.edu:
                     grafana.net.pennren.net:
                     grafana.net.rt.iu.edu:
                     grafana.net.uits.iu.edu:
