--- a/inventory/standard/hosts.yaml
+++ b/inventory/standard/hosts.yaml
@@ -23,6 +23,7 @@ all:
                     grafana.grnoc.iu.edu:
                     grafana.caaren.grnoc.iu.edu:
                     grafana.campuses.grnoc.iu.edu:
+                    grafana.gpn.grnoc.iu.edu:
                     grafana.net.pennren.net:
                     grafana.net.rt.iu.edu:
                     grafana.net.uits.iu.edu:
