--- a/inventory/standard/host_vars/jdratlif-dev7.ctc.grnoc.iu.edu.yaml
+++ b/inventory/standard/host_vars/jdratlif-dev7.ctc.grnoc.iu.edu.yaml
@@ -47,6 +47,7 @@ vpn_hosts:
   - os.bldc.net.internet2.edu
   - os.wash2.net.internet2.edu
   - nessus.boul.nwave.noaa.gov
+  - snapp.ncren.net
   - snapp-frontend-01.globalnoc.mcnc.org
   - snapp-frontend-02.globalnoc.mcnc.org
   - snapp-frontend-test-01.globalnoc.mcnc.org
