--- a/inventory/standard/group_vars/bastion.yaml
+++ b/inventory/standard/group_vars/bastion.yaml
@@ -82,6 +82,7 @@ ssh_host_configs:
   dev:
     Hostname: jdratlif-dev7.ctc.grnoc.iu.edu
     LocalForward: '24478 localhost:5901'
+    LocalForward: '24422 localhost:22'
 
   # DNS servers
   dns:
