--- a/inventory/standard/hosts.yaml
+++ b/inventory/standard/hosts.yaml
@@ -53,6 +53,7 @@ all:
                     rabbitmq.tsds.bldc.grnoc.iu.edu:
                     services.tsds.bldc.grnoc.iu.edu:
                     services.tsds.ctc.grnoc.iu.edu:
+                    simp.grnoc.iu.edu:
                     simp-poller.bldc.grnoc.iu.edu:
                     snapp.bldc.grnoc.iu.edu:
                     snapp.frcy.areon.net:
