--- a/inventory/standard/hosts.yaml
+++ b/inventory/standard/hosts.yaml
@@ -109,6 +109,7 @@ all:
                     alertmon.ctc.grnoc.iu.edu:
                     backup.grnoc.iu.edu:
                     backup.ictc.ilight.net:
+                    bgp.ctc.grnoc.iu.edu:
                     build.grnoc.iu.edu:
                     db-01.grnoc.iu.edu:
                     db-02.grnoc.iu.edu:
