--- a/inventory/standard/hosts.yaml
+++ b/inventory/standard/hosts.yaml
@@ -38,6 +38,7 @@ all:
                     haproxy.ctc.grnoc.iu.edu:
                     io3.bldc.grnoc.iu.edu:
                     irnc-grm.grnoc.iu.edu:
+                    jdratlif-dev7.bldc.grnoc.iu.edu:
                     jdratlif-dev7.ctc.grnoc.iu.edu:
                     map-builder.grnoc.iu.edu:
                     mongo-arbiter.areon.net:
@@ -268,5 +269,5 @@ all:
                     tools2.silv.nwave.noaa.gov:
     xaiver:
       hosts:
-        htpcc:
+        htpc:
           ansible_connection: local
