--- a/inventory/standard/hosts.yaml
+++ b/inventory/standard/hosts.yaml
@@ -211,6 +211,7 @@ all:
                     haproxy.bldc.nwave.noaa.gov:
                     haproxy.ctc.nwave.noaa.gov:
                     map-builder.bldc.nwave.noaa.gov:
+                    netflow-frontend.bldc.nwave.noaa.gov:
                     portal-demo.bldc.nwave.noaa.gov:
                     portal-demo.ctc.nwave.noaa.gov:
                     simp-poller.silv.nwave.noaa.gov:
