added yaml_class to dev

--- a/inventory/standard/host_vars/jdratlif-dev7.ctc.grnoc.iu.edu.yaml
+++ b/inventory/standard/host_vars/jdratlif-dev7.ctc.grnoc.iu.edu.yaml
@@ -7,6 +7,13 @@ aliases:
     -s "vpn-slice 10.0.0.0/8 {{ vpn_hosts | join(' ') }}"
     -u jdratlif https://vpn.iu.edu/groups
 
+functions:
+  yaml_class:
+    - for f in *.eyaml; do
+    -   yq e '.classes[] | select(. == '\"$1\"')' $f 2> /dev/null | grep $1 > /dev/null
+    -   if [ $? == 0 ]; then echo $f; fi
+    - done
+
 keychain_bin: '/usr/local/bin/keychain'
 
 ssh_host_common_configs:
