add grafana ilight

--- a/inventory/standard/group_vars/bastion.yaml
+++ b/inventory/standard/group_vars/bastion.yaml
@@ -104,6 +104,8 @@ ssh_host_configs:
     Hostname: grafana.campuses.grnoc.iu.edu
   'gpn-grafana':
     Hostname: grafana.gpn.grnoc.iu.edu
+  'ilight-grafana':
+    Hostname: grafana.ilight.net
   'iu-grafana':
     Hostname: grafana.net.uits.iu.edu
   'pennren-grafana':
