--- a/inventory/standard/hosts.yaml
+++ b/inventory/standard/hosts.yaml
@@ -41,6 +41,7 @@ all:
                     irnc-grm.grnoc.iu.edu:
                     jdratlif-dev7.bldc.grnoc.iu.edu:
                     jdratlif-dev7.ctc.grnoc.iu.edu:
+                    jeuno.ctc.grnoc.iu.edu:
                     map-builder.grnoc.iu.edu:
                     mongo-arbiter.areon.net:
                     mongo1.tsds.grnoc.iu.edu:
