--- a/inventory/standard/hosts.yaml
+++ b/inventory/standard/hosts.yaml
@@ -47,7 +47,9 @@ all:
                     mongo2.tsds.grnoc.iu.edu:
                     mongo3.tsds.grnoc.iu.edu:
                     netsage-archive.grnoc.iu.edu:
+                    netsage-dev.grnoc.iu.edu:
                     netsage-flow.grnoc.iu.edu:
+                    netsage-pipeline-dev2.bldc.grnoc.iu.edu:
                     netsage-probe1.grnoc.iu.edu:
                     netsage-portal.grnoc.iu.edu:
                     netsage-portal-all.grnoc.iu.edu:
