--- a/inventory/standard/group_vars/grnoc.yaml
+++ b/inventory/standard/group_vars/grnoc.yaml
@@ -19,7 +19,7 @@ functions:
     - >-
       log="tee ~/puppet.log"
     - >-
-      if [[ $action = "env" ]]; grep environment /etc/puppetlabs/puppet/puppet.conf | awk "{print \$3}"
+      if [[ $action = "env" ]]; then grep environment /etc/puppetlabs/puppet/puppet.conf | awk "{print \$3}"
     - >-
       elif [[ $action = "enabled" ]]
     - >2-
