add enable command

--- a/inventory/standard/group_vars/grnoc.yaml
+++ b/inventory/standard/group_vars/grnoc.yaml
@@ -45,6 +45,8 @@ functions:
     - >2-
         $cmd agent --disable "$(date '+%Y-%m-%d') $(whoami) - $msg"
     - >-
+      elif [[ $action = "enable" ]]; then $cmd agent --enable
+    - >-
       else echo "unrecognized action ${action}"
     - >-
       fi
