doesn't like ~ in functions i guess

--- a/inventory/standard/group_vars/grnoc.yaml
+++ b/inventory/standard/group_vars/grnoc.yaml
@@ -17,7 +17,7 @@ functions:
     - >-
       agent="agent --test"
     - >-
-      log="tee ~/puppet.log"
+      log="tee $HOME/puppet.log"
     - >-
       if [[ $action = "env" ]]; then grep environment /etc/puppetlabs/puppet/puppet.conf | awk "{print \$3}"
     - >-
