stderr, too please

--- a/inventory/standard/group_vars/grnoc.yaml
+++ b/inventory/standard/group_vars/grnoc.yaml
@@ -31,11 +31,11 @@ functions:
     - >2-
         fi
     - >-
-      elif [[ $action = "run" ]]; then $cmd $agent "$@" | $log
+      elif [[ $action = "run" ]]; then $cmd $agent "$@" 2>&1 | $log
     - >-
-      elif [[ $action = "test" ]]; then $cmd $agent $noop $ignore_lock "$@" | $log
+      elif [[ $action = "test" ]]; then $cmd $agent $noop $ignore_lock "$@" 2>&1 | $log
     - >-
-      elif [[ $action = "force" ]]; then $cmd $agent $ignore_lock "$@" | $log
+      elif [[ $action = "force" ]]; then $cmd $agent $ignore_lock "$@" 2>&1 | $log
     - >-
       elif [[ $action = "lookup" ]]; then $cmd lookup --merge deep --node "$@"
     - >-
