--- a/inventory/standard/group_vars/grnoc.yaml
+++ b/inventory/standard/group_vars/grnoc.yaml
@@ -27,21 +27,21 @@ functions:
     - >2-
         fi
     - >-
-      elif [[ $action = "run" ]]; then my_cmd="$puppet agent --test "$@" 2>&1 | $log"; echo "running [$my_cmd]..."; eval $my_cmd
+      elif [[ $action = "run" ]]; then my_cmd="$puppet agent --test "$@" 2>&1 | $log"; echo "$my_cmd"; eval $my_cmd
     - >-
-      elif [[ $action = "test" ]]; then my_cmd="$puppet agent --test $ignore_lock --noop "$@" 2>&1 | $log"; echo "running [$my_cmd]..."; eval $my_cmd
+      elif [[ $action = "test" ]]; then my_cmd="$puppet agent --test $ignore_lock --noop "$@" 2>&1 | $log"; echo "$my_cmd"; eval $my_cmd
     - >-
-      elif [[ $action = "force" ]]; then my_cmd="$puppet agent --test $ignore_lock "$@" 2>&1 | $log" ; echo "running [$my_cmd]..."; eval $my_cmd
+      elif [[ $action = "force" ]]; then my_cmd="$puppet agent --test $ignore_lock "$@" 2>&1 | $log" ; echo "$my_cmd"; eval $my_cmd
     - >-
-      elif [[ $action = "lookup" ]]; then my_cmd="$puppet lookup --merge deep --node "$@""; echo "running [$my_cmd]..."; eval $my_cmd
+      elif [[ $action = "lookup" ]]; then my_cmd="$puppet lookup --merge deep --node "$@""; echo "$my_cmd"; eval $my_cmd
     - >-
       elif [[ $action = "disable" ]]; then
     - >2-
         if [[ -z "$1" ]]; then msg="testing"; else msg=$1; fi
     - >2-
-        my_cmd="$puppet agent --disable \"$(date '+%Y-%m-%d') $(whoami) - $msg\""; echo "running [$my_cmd]..."; eval $my_cmd
+        my_cmd="$puppet agent --disable \"$(date '+%Y-%m-%d') $(whoami) - $msg\""; echo "$my_cmd"; eval $my_cmd
     - >-
-      elif [[ $action = "enable" ]]; then my_cmd="$puppet agent --enable"; echo "running [$my_cmd]..."; eval $my_cmd
+      elif [[ $action = "enable" ]]; then my_cmd="$puppet agent --enable"; echo "$my_cmd"; eval $my_cmd
     - >-
       else echo "unrecognized action ${action}"
     - >-
