--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,10 +1,9 @@
 [defaults]
 inventory = inventory/standard
 hash_behaviour = merge
-host_key_checking = false
-timeout = 60
-forks = 25
+timeout = 15
+forks = 30
 
 [ssh_connection]
-pipelining = true
-ssh_args = -F /home/jdratlif/.ssh/config
+pipelining = True
+ssh_args = -F /home/jdratlif/.ssh/config -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null
